syntax = "proto3";
package operation.trigger;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

/* Determies when a template runs (i.e,. when to create orders).
 * Next Id: 10 */
 message Trigger {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.StringValue name = 4;
  google.protobuf.StringValue description = 5;
  google.protobuf.Timestamp expires_at = 6;
  oneof expected_delivery_date {
    ScheduledEvent scheduled_event = 7;
    SpecialEvent special_event = 8;
  }
  string root_id = 9;
}

/* Day and month on which to trigger an event. */
message ScheduledEvent {
  int32 day = 1;
  int32 month = 2; // Counting from 1 to 12.
}

/* List of special trigger events. */
enum SpecialEvent {
  BIRTH_MONTH = 0;
  NEW_HIRE = 1;
  WORK_ANNIVERSARY = 2;
}
